--- a/autos-frontend/src/App.css
+++ b/autos-frontend/src/App.css
@@ -1,29 +1,29 @@
 @font-face {
-    font-family: 'Poppins-Bold';
-    src: url('fonts/Poppins/Poppins-Bold.ttf') format('woff2');
+    font-family: 'TitiliumWeb-Black';
+    src: url('fonts/TitilliumWeb/TitilliumWeb-Black.ttf') format('woff2');
   }
 
   @font-face {
-    font-family: 'Poppins-Extra-light';
-    src: url('fonts/Poppins/Poppins-ExtraLight.ttf') format('woff2');
+    font-family: 'TitilliumWeb-Bold';
+    src: url('fonts/TitilliumWeb/TitilliumWeb-Bold.ttf') format('woff2');
   }
 
   @font-face {
-    font-family: 'Poppins-Semi-Bold';
-    src: url('fonts/Poppins/Poppins-SemiBold.ttf') format('woff2');
+    font-family: 'TitilliumWeb-ExtraLight';
+    src: url('fonts/TitilliumWeb//TitilliumWeb-ExtraLight.ttf') format('woff2');
   }
 
   @font-face {
-    font-family: 'Poppins-Medium';
-    src: url('fonts/Poppins/Poppins-Medium.ttf') format('woff2');
+    font-family: 'TitilliumWeb-Light';
+    src: url('fonts/TitilliumWeb/TitilliumWeb-Light.ttf') format('woff2');
   }
 
   @font-face {
-    font-family: 'Poppins-Regular';
-    src: url('fonts/Poppins/Poppins-Regular.ttf') format('woff2');
+    font-family: 'TitilliumWeb-Regular';
+    src: url('fonts/TitilliumWeb//TitilliumWeb-Regular.ttf') format('woff2');
   }
 
   @font-face {
-    font-family: 'Poppins-Thin';
-    src: url('fonts/Poppins/Poppins-Thin.ttf') format('woff2');
+    font-family: 'TitilliumWeb-SemiBold';
+    src: url('fonts/TitilliumWeb//TitilliumWeb-SemiBold.ttf') format('woff2');
   }
