--- a/autos-frontend/src/App.css
+++ b/autos-frontend/src/App.css
@@ -1,29 +1,72 @@
-@font-face {
-    font-family: 'TitiliumWeb-Black';
-    src: url('fonts/TitilliumWeb/TitilliumWeb-Black.ttf') format('woff2');
-  }
+@media (max-width: 559px) {
+    .signin-container {
+        display: flex;
+          padding-top: 1rem;
+          padding-bottom: 3rem;
+          margin: auto;
+          flex-direction: column;
+          min-height: 100vh;
+          width: 90%
+    }
+}
 
-  @font-face {
-    font-family: 'TitilliumWeb-Bold';
-    src: url('fonts/TitilliumWeb/TitilliumWeb-Bold.ttf') format('woff2');
-  }
 
-  @font-face {
-    font-family: 'TitilliumWeb-ExtraLight';
-    src: url('fonts/TitilliumWeb//TitilliumWeb-ExtraLight.ttf') format('woff2');
-  }
+.loading-component-style {
+    display: flex;
+    justify-content:center;
+}
 
-  @font-face {
-    font-family: 'TitilliumWeb-Light';
-    src: url('fonts/TitilliumWeb/TitilliumWeb-Light.ttf') format('woff2');
-  }
+.btn {
+    border-radius: 0;
+}
 
-  @font-face {
-    font-family: 'TitilliumWeb-Regular';
-    src: url('fonts/TitilliumWeb//TitilliumWeb-Regular.ttf') format('woff2');
-  }
+.btn-primary {
+    border-radius: 0;
+    color: white;
+    width: 100%;
+}
 
-  @font-face {
-    font-family: 'TitilliumWeb-SemiBold';
-    src: url('fonts/TitilliumWeb//TitilliumWeb-SemiBold.ttf') format('woff2');
-  }
+.form-control {
+    border-radius: 0;
+    margin-bottom: 1rem;
+    width: 100%;
+}
+
+/* icon */
+.icon-desgin {
+    margin: auto;
+    text-align: center;
+    color: black;
+    padding-bottom: 1rem
+}
+
+.links-style {
+    text-decoration: none;
+    color: black;
+}
+
+.headericon-style {
+    margin: auto;
+    margin-top: 7rem;
+    margin-bottom: 1rem
+}
+
+.login-register-content {
+        display: flex;
+        padding-top: 1rem;
+        padding-bottom: 3rem;
+        margin: auto;
+        flex-direction: column; 
+        width: 90%;
+}
+
+@media (min-width: 768px) {
+    .login-register-content {
+        width: 560px;
+    }
+}
+
+
+.outlet-content {
+    min-height: calc(100vh - 50px)
+}
